# cavr

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  depend.sh
CMakeModules/: FindGFLAGS.cmake  FindGLEW.cmake  FindGLOG.cmake  FindQUAT.cmake  FindVRPN.cmake
cavr/: CMakeLists.txt  cavr_config.i
cavr/include/cavr/: cavr.h  lock.h  plugin.h  system.h
cavr/include/cavr/com/: communications.h  device_inputs.proto
cavr/include/cavr/config/: config.h  configuration.h  configuration_specification.h  lua_reader.h  lua_specification_reader.h  parameter_specification.h  parameter_types.h
cavr/include/cavr/input/: analog.h  button.h  input.h  input_manager.h  input_map.h  marker.h  sixdof.h  specification.h  switch.h
cavr/include/cavr/math/: matrix.h  vector.h
cavr/include/cavr/math/matrix/: matrix.h
cavr/include/cavr/math/vector/: data.h  operations.h  swizzle.h  traits.h  utils.h  vector.h
cavr/include/cavr/util/: environment.h  file.h  lua_state.h  paths.h  string.h
cavr/source/: lock.cpp  plugin.cpp  system.cpp
cavr/source/com/: communications.cpp
cavr/source/config/: config.cpp  configuration.cpp  configuration_specification.cpp  lua_reader.cpp  lua_specification_reader.cpp  parameter_specification.cpp
cavr/source/input/: analog.cpp  button.cpp  input.cpp  input_manager.cpp  input_map.cpp  marker.cpp  sixdof.cpp  specification.cpp  switch.cpp
cavr/source/math/: matrix.cpp  vector.cpp
cavr/source/util/: environment.cpp  file.cpp  lua_state.cpp  paths.cpp
etc/: CMakeLists.txt
etc/cavr/: cavrconfig.lua  cavrplugins.lua
etc/cavr/config/: example.lua
etc/cavr/schema/: globals.lua  inputs_file.lua  machine.lua  plugin.lua  plugins_file.lua
etc/cavr/schema/input/: analog.lua  button.lua  sixdof.lua  switch.lua
etc/cavr/schema/plugins/: vrpn.lua  x11.lua
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  README.md  app.cpp  shader.frag
examples/app2/: CMakeLists.txt  README.md  app.cpp  shader.vert
extensions/: CMakeLists.txt
extensions/gfx/: CMakeLists.txt
extensions/gfx/include/cavr/gfx/: ray.h  renderer.h  shapes.h  sphere.h
extensions/gfx/source/: ray.cpp  renderer.cpp  shapes.cpp  sphere.cpp
extensions/gl/: CMakeLists.txt
extensions/gl/include/cavr/gl/: shader.h  vao.h  vbo.h
extensions/gl/source/: shader.cpp  vao.cpp  vbo.cpp
plugins/: CMakeLists.txt
plugins/vrpn/: CMakeLists.txt  vrpn.cpp  vrpn.h
plugins/x11gl/: CMakeLists.txt  window.cpp  window.h  x11gl.cpp  x11gl.h
tests/: CMakeLists.txt
tests/cavr/config/: config_test.cpp  configuration_specification_test.cpp  lua_reader_test.cpp  parameter_specification_test.cpp
tests/cavr/input/: analog_test.cpp  input_test.cpp  sixdof_test.cpp  switch_test.cpp
tests/cavr/math/: check_vector.h  matrix_test.cpp  vector_test.cpp
tests/cavr/util/: lua_state_test.cpp  string_test.cpp
tests/etc/cavr/schema/: schema_test.cpp
