CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(cavr)

#ADD_DEFINITIONS(-DDEBUG)
#ADD_DEFINITIONS(-pg)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${CAVR_SOURCE_DIR}/CMakeModules")
SET(CAVR_PLUGIN_PATH "${CMAKE_INSTALL_PREFIX}/cavr/plugins")
#SET(CMAKE_BUILD_TYPE Debug)
SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
SET(CXX11_FLAGS -std=gnu++0x)
SET(CAVR_INCLUDES "${CAVR_SOURCE_DIR}/base/include")

IF(UNIX)
	ADD_DEFINITIONS(-DUNIX)
ENDIF(UNIX)

ADD_SUBDIRECTORY(cavr)
#ADD_SUBDIRECTORY(plugins)

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
				"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
				IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(uninstall
				  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")

