CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(CAVR_MAIN)
SET(CMAKE_MODULE_PATH "${CMAKE_MODULE_PATH}" "${PROJECT_SOURCE_DIR}/CMakeModules")

FIND_PACKAGE(Lua51 REQUIRED)
FIND_PACKAGE(SWIG REQUIRED)
FIND_PACKAGE(GLOG REQUIRED)

ADD_DEFINITIONS(-DDEBUG)
ADD_DEFINITIONS(-DCAVR_ETC_PATH="${CMAKE_CURRENT_SOURCE_DIR}/etc/cavr")
#ADD_DEFINITIONS(-pg)
SET(CAVR_PLUGIN_PATH "${CMAKE_INSTALL_PREFIX}/cavr/plugins")
SET(CMAKE_BUILD_TYPE Debug)
#SET(CMAKE_BUILD_TYPE Release)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
SET(CXX11_FLAGS -std=gnu++11)

IF(UNIX)
	ADD_DEFINITIONS(-DUNIX)
	#ADD_DEFINITIONS(-Dptrdiff_t="long")
ENDIF(UNIX)

ADD_SUBDIRECTORY(cavr)

SET(CAVR_INCLUDES
    "${CAVR_SOURCE_DIR}/include"
    "${LUA_INCLUDE_DIR}"
    "${GLOG_INCLUDE_DIRS}"
)

ADD_SUBDIRECTORY(extensions)
#ADD_SUBDIRECTORY(examples)
ADD_SUBDIRECTORY(plugins)
ADD_SUBDIRECTORY(gtest-1.7.0)
ADD_SUBDIRECTORY(tests)

CONFIGURE_FILE("${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
				"${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
				IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(uninstall
				  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")

