PROJECT(example_app)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
INCLUDE_DIRECTORIES(
    ${CAVR_INCLUDES}
    "${cavrgl_SOURCE_DIR}/include"
    "${cavrgfx_SOURCE_DIR}/include"
)

ADD_EXECUTABLE(example_app app.cpp)
TARGET_LINK_LIBRARIES(example_app cavr cavrgl cavrgfx)
