PROJECT(cavrgl)
FIND_PACKAGE(OpenGL)
FIND_PACKAGE(GLEW REQUIRED)
SET(sources
    "source/shader.cpp"
    "source/vao.cpp"
    "source/vbo.cpp"
)

INCLUDE_DIRECTORIES(
    "include"
    ${CAVR_INCLUDES}
)

SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${CXX11_FLAGS}")
ADD_LIBRARY(cavrgl SHARED ${sources})
ADD_DEPENDENCIES(cavrgl cavr)
SET_TARGET_PROPERTIES(cavrgl PROPERTIES LINKER_LANGUAGE CXX)
INSTALL(TARGETS cavrgl LIBRARY DESTINATION lib)
TARGET_LINK_LIBRARIES(cavrgl cavr ${OPENGL_LIBRARY} ${GLEW_LIBRARIES})
